<resources>
    <string name="app_name">Morphing</string>
    <string name="action_next">Далее</string>
    <string name="action_finish">Готово</string>
    <string name="action_save">Сохранить</string>
    <string name="main_title">Основа морфинга</string>
    <string name="second_title">Изображения-партнеры</string>
    <string name="second_alpha_title">Прозрачность изображения партнера</string>
    <string name="seekbar_min">0</string>
    <string name="seekbar_max">100</string>
    <string name="count_of_frame">Количество кадров</string>
    <string name="count_of_frame_helper">от 1 до 15</string>
    <string name="count_of_frame_error">Недопустимое значение</string>
    <string name="time_of_animation_helper">от 0.5 до 6.0</string>
    <string name="time_of_animation">Длительность анимации (с)</string>
    <string name="select_dir">Выбор папки</string>
</resources>
